<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#3b2a16"
    tools:context="com.example.android.metroquiz.MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textColor="#c00"
        android:textAllCaps="true"
        android:padding="12dp"
        android:textStyle="bold"
        android:text="@string/test_title" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/metro" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/QuestionFont"
        android:layout_marginTop="8dp"
        android:text="@string/question1" />

    <EditText
        android:id="@+id/answer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/question1_hint"
        android:textColor="@color/colorAnswer"
        android:textColorHint="@color/colorAnswer"
        android:inputType="textCapWords" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/QuestionFont"
        android:layout_marginTop="8dp"
        android:text="@string/question2" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/answer2_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAnswer"
            android:buttonTint="@color/colorAnswer"
            android:text="@string/answer2_1" />
        <RadioButton
            android:id="@+id/answer2_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAnswer"
            android:buttonTint="@color/colorAnswer"
            android:text="@string/answer2_2" />
        <RadioButton
            android:id="@+id/answer2_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAnswer"
            android:buttonTint="@color/colorAnswer"
            android:text="@string/answer2_3" />
        <RadioButton
            android:id="@+id/answer2_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAnswer"
            android:buttonTint="@color/colorAnswer"
            android:text="@string/answer2_4" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/QuestionFont"
        android:layout_marginTop="8dp"
        android:text="@string/question3" />

    <CheckBox
        android:id="@+id/answer3_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAnswer"
        android:buttonTint="@color/colorAnswer"
        android:text="@string/answer3_1" />

    <CheckBox
        android:id="@+id/answer3_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAnswer"
        android:buttonTint="@color/colorAnswer"
        android:text="@string/answer3_2" />

    <CheckBox
        android:id="@+id/answer3_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAnswer"
        android:buttonTint="@color/colorAnswer"
        android:text="@string/answer3_3" />

    <CheckBox
        android:id="@+id/answer3_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAnswer"
        android:buttonTint="@color/colorAnswer"
        android:text="@string/answer3_4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/QuestionFont"
        android:layout_marginTop="8dp"
        android:text="@string/question4" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/answer4_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAnswer"
            android:buttonTint="@color/colorAnswer"
            android:text="@string/answer4_1" />
        <RadioButton
            android:id="@+id/answer4_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAnswer"
            android:buttonTint="@color/colorAnswer"
            android:text="@string/answer4_2" />
        <RadioButton
            android:id="@+id/answer4_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAnswer"
            android:buttonTint="@color/colorAnswer"
            android:text="@string/answer4_3" />
        <RadioButton
            android:id="@+id/answer4_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAnswer"
            android:buttonTint="@color/colorAnswer"
            android:text="@string/answer4_4" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/QuestionFont"
        android:layout_marginTop="8dp"
        android:text="@string/question5" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/answer5_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAnswer"
            android:buttonTint="@color/colorAnswer"
            android:text="@string/answer5_1" />
        <RadioButton
            android:id="@+id/answer5_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAnswer"
            android:buttonTint="@color/colorAnswer"
            android:text="@string/answer5_2" />
        <RadioButton
            android:id="@+id/answer5_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAnswer"
            android:buttonTint="@color/colorAnswer"
            android:text="@string/answer5_3" />
        <RadioButton
            android:id="@+id/answer5_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAnswer"
            android:buttonTint="@color/colorAnswer"
            android:text="@string/answer5_4" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/QuestionFont"
        android:layout_marginTop="8dp"
        android:text="@string/question6" />

    <CheckBox
        android:id="@+id/answer6_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAnswer"
        android:buttonTint="@color/colorAnswer"
        android:text="@string/answer6_1" />

    <CheckBox
        android:id="@+id/answer6_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAnswer"
        android:buttonTint="@color/colorAnswer"
        android:text="@string/answer6_2" />

    <CheckBox
        android:id="@+id/answer6_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAnswer"
        android:buttonTint="@color/colorAnswer"
        android:text="@string/answer6_3" />

    <CheckBox
        android:id="@+id/answer6_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAnswer"
        android:buttonTint="@color/colorAnswer"
        android:text="@string/answer6_4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/QuestionFont"
        android:layout_marginTop="8dp"

        android:text="@string/question7" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/answer7_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAnswer"
            android:buttonTint="@color/colorAnswer"
            android:text="@string/answer7_1" />
        <RadioButton
            android:id="@+id/answer7_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAnswer"
            android:buttonTint="@color/colorAnswer"
            android:text="@string/answer7_2" />
        <RadioButton
            android:id="@+id/answer7_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAnswer"
            android:buttonTint="@color/colorAnswer"
            android:text="@string/answer7_3" />
        <RadioButton
            android:id="@+id/answer7_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAnswer"
            android:buttonTint="@color/colorAnswer"
            android:text="@string/answer7_4" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/QuestionFont"
        android:layout_marginTop="8dp"
        android:text="@string/question8" />

    <CheckBox
        android:id="@+id/answer8_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAnswer"
        android:buttonTint="@color/colorAnswer"
        android:text="@string/answer8_1" />

    <CheckBox
        android:id="@+id/answer8_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAnswer"
        android:buttonTint="@color/colorAnswer"
        android:text="@string/answer8_2" />

    <CheckBox
        android:id="@+id/answer8_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAnswer"
        android:buttonTint="@color/colorAnswer"
        android:text="@string/answer8_3" />

    <CheckBox
        android:id="@+id/answer8_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAnswer"
        android:buttonTint="@color/colorAnswer"
        android:text="@string/answer8_4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/QuestionFont"
        android:layout_marginTop="8dp"
        android:text="@string/question9" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/answer9_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAnswer"
            android:buttonTint="@color/colorAnswer"
            android:text="@string/answer9_1" />
        <RadioButton
            android:id="@+id/answer9_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAnswer"
            android:buttonTint="@color/colorAnswer"
            android:text="@string/answer9_2" />
        <RadioButton
            android:id="@+id/answer9_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAnswer"
            android:buttonTint="@color/colorAnswer"
            android:text="@string/answer9_3" />
        <RadioButton
            android:id="@+id/answer9_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAnswer"
            android:buttonTint="@color/colorAnswer"
            android:text="@string/answer9_4" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/QuestionFont"
        android:layout_marginTop="8dp"
        android:text="@string/question10" />

    <EditText
        android:id="@+id/answer10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/question10_hint"
        android:textColor="@color/colorAnswer"
        android:textColorHint="@color/colorAnswer"
        android:inputType="textCapWords" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:onClick="checkResults"
        android:text="@string/check"/>

    </LinearLayout>
</LinearLayout>
</ScrollView>
